--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Axent Equipment</title>
   </head>
-  <body></body>
+  <body>
+    <section class="header"></section>
+    <main class="main">
+      <section class="herro"></section>
+      <section class="about"></section>
+      <section class="krans"></section>
+      <section class="footer"></section>
+    </main>
+  </body>
 </html>
